[gd_scene load_steps=5 format=3 uid="uid://ca53ncao01ppo"]

[ext_resource type="Script" path="res://scenes/enemies/Moving_platform1.gd" id="1_ge6da"]
[ext_resource type="Texture2D" uid="uid://xhuq8u782nf3" path="res://assets_image/Objects/object2.png" id="2_av57g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6buaw"]
size = Vector2(30, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8v8xo"]
size = Vector2(30, 41)

[node name="SimpleMovingPlatform" type="CharacterBody2D"]
z_index = 2
scale = Vector2(2, 1)
collision_layer = 7
collision_mask = 7
script = ExtResource("1_ge6da")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 16)
rotation = 3.14159
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_av57g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -2)
shape = SubResource("RectangleShape2D_6buaw")

[node name="StartMarker" type="Marker2D" parent="."]
position = Vector2(0, -8)

[node name="EndMarker" type="Marker2D" parent="."]
position = Vector2(68, 0)

[node name="DamageArea" type="Area2D" parent="."]
position = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(1, 20.5)
shape = SubResource("RectangleShape2D_8v8xo")
